Deploy no Heroku

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "vojo-frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.16.3"
+  },
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@material-ui/icons": "^4.9.1",
@@ -11,7 +14,10 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "node-sass": "^4.14.0",
+    "path": "^0.12.7",
     "polished": "^3.6.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -24,10 +30,11 @@
     "sweetalert": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:local": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start": "node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
