--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "sweetalert": "^2.1.2"
   },
   "scripts": {
-    "start:local": "react-scripts start",
+    "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
